--- a/Cinefilos/assets/manifest.json
+++ b/Cinefilos/assets/manifest.json
@@ -1,19 +1,19 @@
 {
   "name": "Cinéfilos",
   "short_name": "Cinéfilos",
-  "start_url": "/index.html",
+  "start_url": "/Cinefilos/index.html",
+  "scope": "/Cinefilos/",
   "display": "standalone",
   "background_color": "#111111",
   "theme_color": "#111111",
-  "orientation": "portrait",
   "icons": [
     {
-      "src": "/assets/icons/icon-192.png",
+      "src": "/Cinefilos/assets/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/assets/icons/icon-512.png",
+      "src": "/Cinefilos/assets/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
